<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:background="@color/darkgreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.mutunga.register">


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:inputType="textPersonName"
        android:background="@color/lawngreen"
        android:ems="10"
        android:id="@+id/age"
        android:hint="@string/age"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:inputType="textPersonName"
        android:background="@color/lawngreen"
        android:hint="@string/name"
        android:ems="10"
        android:id="@+id/firstname"
        android:layout_marginBottom="19dp"
        android:layout_above="@+id/age"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:layout_above="@+id/firstname"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"
        android:background="@color/lawngreen"
        android:ems="10"
        android:hint="@string/your_name"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/alreadyhaveaccount"
        android:layout_width="400dp"
        android:layout_height="50sp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:hint="@string/already" />

    <Button
        android:id="@+id/register"
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="17dp"
        android:hint="@string/register" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/age"
        android:layout_marginTop="19dp"
        android:background="@color/lawngreen"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="numberPassword" />




</RelativeLayout>
