<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/darkgreen"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.mutunga.login">


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:background="@color/lawngreen"
        android:inputType="textPersonName"
        android:hint="@string/hint_username"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/username" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:background="@color/lawngreen"
        android:inputType="textPersonName"
        android:hint="@string/hint_password"
        android:ems="10"
        android:layout_below="@+id/username"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:id="@+id/password" />

    <Button
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="80sp"
        android:layout_marginTop="99dp"
        android:drawableStart="@drawable/login"
        android:hint="@string/login"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/createaccount"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login"
        android:layout_marginTop="36dp"
        android:background="@color/colorPrimaryDark"
        android:hint="@string/create_acccount"
        android:textSize="@dimen/activity_horizontal_margin" />


</RelativeLayout>
